@@ -1,6 +1,7 @@
 Newest at the top
 YYYY-MM-DD HR:MIN - comment
 
+2016-03-15 22:00 - Made capitalization changes in instructor names; reformatted XML files
 2016-03-13 15:35 - Updated the 3 xml faucets to match new schedule.dtd
 2016-03-11 14:33 - Updated schedule according to the feedback given
 2016-03-10 14:12 - fixed timetable.xml to have 24HR clock instead of 12HR
